Added Job Application Organizer functionality with local storage, search, and delete features

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <textarea id="notes" placeholder="Additional Notes"></textarea>
             <button type="submit">Add Job Application</button>
         </form>
+
+        <h2>Job Applications</h2>
+        <input type="text" id="search" placeholder="Search Applications">
         <ul id="application-list"></ul>
     </div>
     <script src="script.js"></script>
