Added Job Application Organizer with edit, delete, and filter functionalities

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
         <h2>Job Applications</h2>
         <input type="text" id="search" placeholder="Search Applications">
+        <select id="filter-status">
+            <option value="">All Statuses</option>
+            <option value="Applied">Applied</option>
+            <option value="Interview">Interview</option>
+            <option value="Rejected">Rejected</option>
+        </select>
         <ul id="application-list"></ul>
     </div>
     <script src="script.js"></script>
